fixed layout issue

--- a/src/pages/auth/style.scss
+++ b/src/pages/auth/style.scss
@@ -26,8 +26,8 @@
       align-items: center;
       text-align: center;
       flex-direction: column;
-      gap: 20px;
-      margin-bottom: 50px;
+      gap: 15px;
+      margin-bottom: 40px;
 
       .logo_container {
         height: 70px;
